[keyboard kcm] fix lost Locks state on keymap reconfigure

Fixes Num/Caps Locks (do we need Scroll also?)

BUG: 443739


(cherry picked from commit be35ef6a9a812052910066bed2005a2b3bb92ec4)